--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,3 +37,10 @@ https://css-tricks.com/hash-tag-links-padding/ */
     visibility: hidden; 
     pointer-events: none;
   }
+
+.is-absolute{
+    position: absolute;
+}
+#menu-edit-button{
+    right:0;
+}
