--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,10 @@
 //Bulma
 @import '~bulma/bulma';
 
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
 html {
     scroll-behavior: smooth;
   }
@@ -43,4 +47,11 @@ https://css-tricks.com/hash-tag-links-padding/ */
 }
 #menu-edit-button{
     right:0;
+}
+#menuEditor{
+    &.hide-menu-items{
+        .menu_items{
+            display: none;
+        }
+    }
 }
