dynamically create item in sections

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 //Bulma
 $section-padding: 1rem 0.5rem;
-@import '~bulma/bulma';
+
+@import "~bulma";
+
 
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/regular';
