--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -96,3 +96,7 @@ https://css-tricks.com/hash-tag-links-padding/ */
         padding: 0.5rem !important;
     }
 }
+
+.cursor-pointer{
+    cursor: pointer;
+}
