changed qr code to be for establishments instead

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25077,6 +25077,10 @@ https://css-tricks.com/hash-tag-links-padding/ */
   right: 0;
 }
 
+#all-menus-button {
+  left: 0;
+}
+
 #menuEditor.hide-menu-items .menu_items {
   display: none;
 }
