--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -82,6 +82,9 @@ https://css-tricks.com/hash-tag-links-padding/ */
 #menu-edit-button{
     right:0;
 }
+#all-menus-button{
+    left:0;
+}
 #menuEditor{
     &.hide-menu-items{
         .menu_items{
